--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/26/n11478084.md#1" target="_blank">翻译家巫宁坤爱国竟受难 历劫著书留警训</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494502.md#1" target="_blank">探寻东方养生道 希腊青年在修炼中得到升华</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9970937.md#1" target="_blank">严家伟：访“共产主义接班人”的集体大坟场</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
